syntax = "proto3";
package ncs.game.chat;
option go_package = "grpc";

import "google/api/annotations.proto";

message AllChatReq {
    string name = 1;
    string message = 2;
}

message AllChatResp {
}

message ChatNotifyReq {
    int64 uid = 1;
    string prefix = 2;
    string message = 3;
}

message ChatNotifyResp {
}

service Chat {
    rpc AllChat (AllChatReq) returns (AllChatResp) {
        option (google.api.http) = {
            post: "/game/chat/allchat"
            body: "*"
        };
    }
    rpc ChatNotify (ChatNotifyReq) returns (ChatNotifyResp);
}